--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Működik! Működik!
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Működik!</h1>
+<h2>Működik!</h2>
+<h3>Működik!</h3>
+<h4>Működik!</h4>
+<h5>Működik!</h5>
+<h6>Működik!</h6>
+
+</body>
+</html>
