--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <!-- Explore Nature -->
   <div class="w3-container">
     <h3>Eredmények</h3>
-    <p>A különböző modellek validációjára nem maradt időnk, így egyszerűen csak megmutatjuk a különböző modelleken átfuttatok adatok eredményeit.</p>
+    <p>A különböző modellek validációjára nem maradt időnk, így egyszerűen csak megmutatjuk a különböző modelleken átfuttatott adatok eredményeit.</p>
   </div>
+
+
   <div class="w3-row-padding">
     <div class="w3-half w3-margin-bottom">
       <img src="https://imgur.com/YBf7u4H.jpg" alt="Norway" style="width:100%">
       <div class="w3-container w3-white">
         <h3>Neurális hálóval</h3>
-        <p class="w3-opacity">valami</p>
+        <p class="w3-opacity">Hamarosan</p>
         <ul style="list-style-type:disc">
-  			<li>Coffee</li>
-  			<li>Tea</li>
-  			<li>Milk</li>
+            <li>Nincs adat</li>
 		</ul>
       </div>
     </div>
@@ -81,15 +81,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
       <img src="https://imgur.com/xTznAPT.jpg" alt="Austria" style="width:100%">
       <div class="w3-container w3-white">
         <h3>Döntési fával</h3>
-        <p class="w3-opacity">valami</p>
+        <p class="w3-opacity">A megadott értékek alapján: </p>
         <ul style="list-style-type:disc">
-  			<li>Coffee</li>
-  			<li>Tea</li>
-  			<li>Milk</li>
+  			<li>2018.09.22.    -------->    70127.</li>
+  			<li>2018.09.23.    -------->    62687.</li>
+  			<li>2018.09.24.    -------->    57458.</li>
+            <li>2018.09.25.    -------->    69897.</li>
+  			<li>2018.09.26.    -------->    70883.</li>
+            <a>Tovább</a>
 		</ul>
       </div>
     </div>
   </div>
+
 
 
   <div class="w3-row-padding">
@@ -97,27 +101,70 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
       <img src="https://imgur.com/q6Sucop.jpg" alt="Norway" style="width:100%">
       <div class="w3-container w3-white">
         <h3>SVC-vel</h3>
-        <p class="w3-opacity">valami</p>
+        <p class="w3-opacity">A megadott értékek alapján: </p>
         <ul style="list-style-type:disc">
-  			<li>Coffee</li>
-  			<li>Tea</li>
-  			<li>Milk</li>
+  			<li>2018.09.22.    -------->    39462.</li>
+  			<li>2018.09.23.    -------->    40975.</li>
+  			<li>2018.09.24.    -------->    35922.</li>
+            <li>2018.09.25.    -------->    20998.</li>
+  			<li>2018.09.26.    -------->    39397.</li>
+            <a>Tovább</a>
 		</ul>
       </div>
     </div>
     <div class="w3-half w3-margin-bottom">
-      <img src="https://imgur.com/q6Sucop.jpg" alt="Austria" style="width:100%">
+      <img src="https://imgur.com/6SnSyiQ.jpg" alt="Austria" style="width:100%">
       <div class="w3-container w3-white">
-        <h3>Tököm tudja mivel</h3>
-        <p class="w3-opacity">valami</p>
+        <h3>RBF SVR-vel</h3>
+        <p class="w3-opacity">A megadott értékek alapján: </p>
         <ul style="list-style-type:disc">
-  			<li>Coffee</li>
-  			<li>Tea</li>
-  			<li>Milk</li>
+  			<li>2018.09.22.    -------->    32944.</li>
+  			<li>2018.09.23.    -------->    33489.</li>
+  			<li>2018.09.24.    -------->    27992.</li>
+            <li>2018.09.25.    -------->    41597.</li>
+  			<li>2018.09.26.    -------->    31997.</li>
+            <a>Tovább</a>
 		</ul>
       </div>
     </div>
   </div>
+
+
+
+  <div class="w3-row-padding">
+    <div class="w3-half w3-margin-bottom">
+      <img src="https://imgur.com/ii8MxUM.jpg" alt="Norway" style="width:100%">
+      <div class="w3-container w3-white">
+        <h3>Lineáris SVR-vel</h3>
+        <p class="w3-opacity">A megadott értékek alapján: </p>
+        <ul style="list-style-type:disc">
+  			<li>2018.09.22.    -------->    52456.</li>
+  			<li>2018.09.23.    -------->    41869.</li>
+  			<li>2018.09.24.    -------->    36887.</li>
+            <li>2018.09.25.    -------->    45933.</li>
+  			<li>2018.09.26.    -------->    50387.</li>
+            <a>Tovább</a>
+		</ul>
+      </div>
+    </div>
+    <div class="w3-half w3-margin-bottom">
+      <img src="https://imgur.com/V4gCPS4.jpg" alt="Austria" style="width:100%">
+      <div class="w3-container w3-white">
+        <h3>Poly. SVR-vel</h3>
+        <p class="w3-opacity">A megadott értékek alapján: </p>
+        <ul style="list-style-type:disc">
+  			<li>2018.09.22.    -------->    30864.</li>
+  			<li>2018.09.23.    -------->    32944.</li>
+  			<li>2018.09.24.    -------->    25949.</li>
+            <li>2018.09.25.    -------->    40267.</li>
+  			<li>2018.09.26.    -------->    32941.</li>
+            <a>Tovább</a>
+		</ul>
+      </div>
+    </div>
+  </div>
+
+
 
 <!-- End page content -->
 </div>
